--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -2,24 +2,40 @@
 title: "index"
 author: "Curt Whitmire"
 date: "11/30/2017"
-output: html_document
+output:
+  html_document:
+    code_folding: hide
+    toc: true
+    toc_float: true
 ---
 
-```{r setup, include=FALSE}
+```{r scatterplot, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
+
+library(tidyverse)
 ```
 
-## R Markdown
+## Scatterplot
 
 This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
 
 When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
 
 ```{r cars}
+
+
+# data()
+#mpg
+
+g <- ggplot(data = mpg, aes(x = displ, y = hwy))
+g + geom_point()
+
 summary(cars)
 ```
 
-## Including Plots
+### I need color!
+
+## Boxplot
 
 You can also embed plots, for example:
 
