--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -15,32 +15,47 @@ knitr::opts_chunk$set(echo = TRUE)
 library(tidyverse)
 ```
 
-## Scatterplot
 
 This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
 
 When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
 
-```{r cars}
+## Scatterplot
+
+```{r basic points}
 
 
 # data()
 #mpg
 
-g <- ggplot(data = mpg, aes(x = displ, y = hwy))
-g + geom_point()
+ggplot(data = mpg, aes(x = displ, y = hwy)) + 
+  geom_point()
 
 summary(cars)
 ```
 
-### I need color!
+### 'color'!
 
-## Boxplot
+```{r color}
+ggplot(data = mpg, aes(x = displ, y = hwy)) + 
+  geom_point() + 
+  geom_point(aes(color = class))
+```
+### `shabut need an b&w figure
 
-You can also embed plots, for example:
+Changed color to shape
 
-```{r pressure, echo=FALSE}
-plot(pressure)
+```{r b&w}
+ggplot(data = mpg, aes(x = displ, y = hwy)) + 
+  geom_point() + 
+  geom_point(aes(shape = class))
+```
+## shape size
+
+```{r shape size}
+ggplot(data = mpg, aes(x = displ, y = hwy)) + 
+  geom_point() + 
+  geom_point(aes(color = class))
 ```
 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+
